[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["AyaAbuRashed <ayanaser402@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.5"
seaborn = "^0.11.0"
jupyter = "^1.0.0"
lab = "^6.2"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
